# awp34s

./: BUILDING.md  Makefile  README.md  TODO.md  privacy_policy.txt  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  PATCH  PROCEDURE  SVN_MANIFEST  SVN_REVISION  apply_patch  clean_patch  makefile.diff  wp34s_android.cpp  wp34s_android.h  wp34s_wrapper.c  wps34_wrapper.h  xeq.diff
app/src/main/java/com/odkq/wp34s/: LcdConstants.java  MainActivity.java
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
